style: Fix info box width overflow
* style/worg-classic.css (@media all .org-info-box, .info):
(@media all .inlinetask):
* style/worg.css:
* style/worg7.css: Avoid contents overflowing over the box.

--- a/style/worg-classic.css
+++ b/style/worg-classic.css
@@ -198,6 +198,7 @@
 	margin-right: 1em;
 	background-color: #f3f3f3;
 	border-radius: 0.7em;
+        min-width: fit-content;
     }
     .org-info-box img {
 	float:left;
@@ -223,6 +224,7 @@
 	margin-right: 1em;
 	background-color: #fcf2f2;
 	border-radius: 0.7em;
+        min-width: fit-content;
     }
     .inlinetask::before {
 	content: "";
