--- a/style/worg7.css
+++ b/style/worg7.css
@@ -258,6 +258,7 @@
       margin-right: 1em;
       background-color: #f3f3f3;
       border-radius: 0.7em;
+      min-width: fit-content;
   }
   .org-info-box img {
       float:left;
@@ -283,6 +284,7 @@
       margin-right: 1em;
       background-color: #fcf2f2;
       border-radius: 0.7em;
+      min-width: fit-content;
   }
   .inlinetask::before {
       content: "";
